# LVS-Task-1

./: .gitignore  CMakeLists.txt  README.md  gps_log.csv  main.cpp  requirements.txt  run_edge_inference.py  sensor.cfg
app/: inference_service.py  main.py  postprocess.py  preprocess.py
benchmark/: accuracy_best.py  accuracy_fp16.py  accuracy_int8.py  accuracy_onnx.py  benchmark_inference.py  benchmark_int8_inference.py  benchmark_onnx_inference.py
configs/: config.py
include/: hardware_sensor.hpp  sensor_factory.hpp  sensor_interface.hpp  simulated_sensor.hpp
inference/: yolo_infer.py
models/: Dockerfile  parking_detector_int8.onnx
pipeline/: run_batch_inference.py
scripts/: convert_to_fp16.py  download_model.py  export_to_onnx.py  quantize_onnx.py  quantize_to_int8.py
src/: hardware_sensor.cpp  sensor_factory.cpp  simulated_sensor.cpp  yolo_inference.cpp
utils/: io_utils.py  viz_utils.py
